--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=League Spartan"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/style/stylesheet.css" />
   </head>
   <body>
@@ -20,6 +24,7 @@
             perferendis aliquam dolores, libero voluptas. Atque commodi quia
             porro voluptatum accusantium corrupti iusto maiores fuga modi in?
           </p>
+          <button id="btn-seeMore">See more</button>
           <div class="icon-wrapper"></div>
         </div>
       </div>
