--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style/stylesheet.css" />
+    <script defer type="module" src="/script/index.mjs"></script>
   </head>
   <body>
     <div class="wrapper-cards">
@@ -24,7 +25,7 @@
             perferendis aliquam dolores, libero voluptas. Atque commodi quia
             porro voluptatum accusantium corrupti iusto maiores fuga modi in?
           </p>
-          <button id="btn-seeMore">See more</button>
+          <button id="btn-seeMore">See More</button>
           <div class="icon-wrapper"></div>
         </div>
       </div>
