--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <script
+      src="https://kit.fontawesome.com/5386c22845.js"
+      crossorigin="anonymous"
+    ></script>
+
     <link
       href="https://fonts.googleapis.com/css?family=League Spartan"
       rel="stylesheet"
@@ -13,6 +18,25 @@
     <script defer type="module" src="/script/index.mjs"></script>
   </head>
   <body>
+    <div class="topnav">
+      <div class="div">
+        <img src="/images/49b2cef63b39a3d7bf1f61eee6749ccd.png" id="img-logo" />
+      </div>
+      <div class="div">
+        <a class="nav-option" href="#contact">about me</a>
+        <a class="nav-option active-nav" href="#about">my projects</a>
+      </div>
+    </div>
+    <div class="top-section">
+      <h1>My recent projects</h1>
+      <p>here is some of my recent projects i been working on</p>
+      <a class="nav-option active-nav" href="#about"
+        ><i class="fa-brands fa-github"></i>
+      </a>
+      <a class="nav-option active-nav" href="#about"
+        ><i class="fa fa-linkedin" aria-hidden="true"></i>
+      </a>
+    </div>
     <div class="wrapper-cards">
       <div class="card">
         <div class="padding-card">
@@ -22,14 +46,26 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque est
             reprehenderit libero? Laudantium blanditiis aperiam harum at
             assumenda voluptate debitis reprehenderit exercitationem reiciendis
-            perferendis aliquam dolores, libero voluptas. Atque commodi quia
-            porro voluptatum accusantium corrupti iusto maiores fuga modi in?
+            perferendis aliquam dolores,
           </p>
           <button id="btn-seeMore">See More</button>
           <div class="icon-wrapper"></div>
         </div>
       </div>
-      <div class="card"></div>
+      <div class="card">
+        <div class="padding-card">
+          <img src="/images/adventureTrails.png" class="img-card" />
+          <h2>AuctionHouse</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque est
+            reprehenderit libero? Laudantium blanditiis aperiam harum at
+            assumenda voluptate debitis reprehenderit exercitationem reiciendis
+            perferendis aliquam dolores,
+          </p>
+          <button id="btn-seeMore">See More</button>
+          <div class="icon-wrapper"></div>
+        </div>
+      </div>
       <div class="card"></div>
       <div class="card">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, dicta.
