--- a/index.html
+++ b/index.html
@@ -23,56 +23,20 @@
         <img src="/images/49b2cef63b39a3d7bf1f61eee6749ccd.png" id="img-logo" />
       </div>
       <div class="div">
-        <a class="nav-option" href="#contact">about me</a>
+        <a class="nav-option" href="about.html">about me</a>
         <a class="nav-option active-nav" href="#about">my projects</a>
       </div>
     </div>
     <div class="top-section">
       <h1>My recent projects</h1>
       <p>here is some of my recent projects i been working on</p>
-      <a class="nav-option active-nav" href="#about"
+      <a class="nav-option active-nav" href=""
         ><i class="fa-brands fa-github"></i>
       </a>
-      <a class="nav-option active-nav" href="#about"
+      <a class="nav-option active-nav" href=""
         ><i class="fa fa-linkedin" aria-hidden="true"></i>
       </a>
     </div>
-    <div class="wrapper-cards">
-      <div class="card">
-        <div class="padding-card">
-          <img src="/images/auctionHouse.png" class="img-card" />
-          <h2>AuctionHouse</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque est
-            reprehenderit libero? Laudantium blanditiis aperiam harum at
-            assumenda voluptate debitis reprehenderit exercitationem reiciendis
-            perferendis aliquam dolores,
-          </p>
-          <button id="btn-seeMore">See More</button>
-          <div class="icon-wrapper"></div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="padding-card">
-          <img src="/images/adventureTrails.png" class="img-card" />
-          <h2>AuctionHouse</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque est
-            reprehenderit libero? Laudantium blanditiis aperiam harum at
-            assumenda voluptate debitis reprehenderit exercitationem reiciendis
-            perferendis aliquam dolores,
-          </p>
-          <button id="btn-seeMore">See More</button>
-          <div class="icon-wrapper"></div>
-        </div>
-      </div>
-      <div class="card"></div>
-      <div class="card">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, dicta.
-        Ex tempora hic minima recusandae, laboriosam alias et veniam repellat!
-      </div>
-      <div class="card"></div>
-      <div class="card"></div>
-    </div>
+    <div class="wrapper-cards"></div>
   </body>
 </html>
