--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
         <img src="/images/49b2cef63b39a3d7bf1f61eee6749ccd.png" id="img-logo" />
       </div>
       <div class="div">
-        <a class="nav-option" href="about.html">about me</a>
-        <a class="nav-option active-nav" href="#about">my projects</a>
+        <a class="nav-option active-nav">about me</a>
+        <a class="nav-option" href="index.html">my projects</a>
       </div>
     </div>
     <div class="main-content">
@@ -32,23 +32,26 @@
           id="img-about"
           alt="portfolio picture of me"
         />
+        <div class="contact-icons">
+          <a class="nav-option active-nav" href="https://github.com/AudunTA"
+            ><i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            class="nav-option active-nav"
+            href="https://www.linkedin.com/in/audun-thompson-anderssen-79b3b3222/"
+            ><i class="fa fa-linkedin" aria-hidden="true"></i>
+          </a>
+        </div>
+
         <p id="about-text">
           As a front-end developer currently studying at Noroff in Kristiansand,
           I have a passion for creating visually stunning and user-friendly
           websites. With a strong foundation in HTML, CSS, and JavaScript, I am
           skilled in the development and implementation of responsive design and
           enjoy working on projects that push the boundaries of modern web
-          development. Im currently learning React.
+          development. Im currently learning React. Feel free to reach out to me
+          if you got any questions!
         </p>
-        <div class="contact-about">
-          <p>feel free to contact me</p>
-          <a class="nav-option active-nav" href=""
-            ><i class="fa-brands fa-github"></i>
-          </a>
-          <a class="nav-option active-nav" href=""
-            ><i class="fa fa-linkedin" aria-hidden="true"></i>
-          </a>
-        </div>
       </div>
     </div>
   </body>
