--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     <div class="top-section">
       <h1>My recent projects</h1>
       <p>here is some of my recent projects i been working on</p>
-      <a class="nav-option active-nav" href=""
+      <a class="nav-option active-nav" href="https://github.com/AudunTA"
         ><i class="fa-brands fa-github"></i>
       </a>
-      <a class="nav-option active-nav" href=""
+      <a
+        class="nav-option active-nav"
+        href="https://www.linkedin.com/in/audun-thompson-anderssen-79b3b3222/"
         ><i class="fa fa-linkedin" aria-hidden="true"></i>
       </a>
     </div>
